--- a/css/output.css
+++ b/css/output.css
@@ -779,6 +779,10 @@ html::-webkit-scrollbar-thumb {
   height: 100vh;
 }
 
+.w-\[120px\] {
+  width: 120px;
+}
+
 .w-fit {
   width: -moz-fit-content;
   width: fit-content;
@@ -786,14 +790,6 @@ html::-webkit-scrollbar-thumb {
 
 .w-full {
   width: 100%;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.w-\[120px\] {
-  width: 120px;
 }
 
 .max-w-5xl {
@@ -806,6 +802,10 @@ html::-webkit-scrollbar-thumb {
 
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .grid-cols-2 {
@@ -848,20 +848,6 @@ html::-webkit-scrollbar-thumb {
   gap: 1.5rem;
 }
 
-.gap-8 {
-  gap: 2rem;
-}
-
-.gap-10 {
-  gap: 2.5rem;
-}
-
-.space-y-5 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
-}
-
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
@@ -895,6 +881,22 @@ html::-webkit-scrollbar-thumb {
   background-image: url('img/home3.jpg');
 }
 
+.bg-\[url\(\'\.\/img\/home3\.jpg\'\)\] {
+  background-image: url('./img/home3.jpg');
+}
+
+.bg-\[url\(\'\'\)\] {
+  background-image: url('');
+}
+
+.bg-\[url\(\'img\/home\.jpg\'\)\] {
+  background-image: url('img/home.jpg');
+}
+
+.bg-\[url\(\'\/img\/home3\.jpg\'\)\] {
+  background-image: url('/img/home3.jpg');
+}
+
 .bg-\[cover\] {
   background-size: cover;
 }
@@ -905,10 +907,6 @@ html::-webkit-scrollbar-thumb {
 
 .p-2 {
   padding: 0.5rem;
-}
-
-.p-5 {
-  padding: 1.25rem;
 }
 
 .px-5 {
@@ -980,12 +978,6 @@ html::-webkit-scrollbar-thumb {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -1018,14 +1010,6 @@ html::-webkit-scrollbar-thumb {
 
   .sm\:justify-between {
     justify-content: space-between;
-  }
-
-  .sm\:gap-8 {
-    gap: 2rem;
-  }
-
-  .sm\:gap-4 {
-    gap: 1rem;
   }
 
   .sm\:text-7xl {
