--- a/css/output.css
+++ b/css/output.css
@@ -798,12 +798,20 @@ html::-webkit-scrollbar-thumb {
   width: 100%;
 }
 
+.w-\[\] {
+  width: ;
+}
+
+.w-\[100px\] {
+  width: 100px;
+}
+
 .max-w-5xl {
   max-width: 64rem;
 }
 
-.max-w-\[500px\] {
-  max-width: 500px;
+.max-w-\[300px\] {
+  max-width: 300px;
 }
 
 .transform {
@@ -889,6 +897,11 @@ html::-webkit-scrollbar-thumb {
   padding: 0.5rem;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
@@ -897,6 +910,11 @@ html::-webkit-scrollbar-thumb {
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .text-center {
@@ -984,12 +1002,30 @@ html::-webkit-scrollbar-thumb {
 }
 
 @media (min-width: 640px) {
+  .sm\:w-\[250px\] {
+    width: 250px;
+  }
+
+  .sm\:max-w-\[500px\] {
+    max-width: 500px;
+  }
+
   .sm\:flex-row {
     flex-direction: row;
   }
 
   .sm\:justify-between {
     justify-content: space-between;
+  }
+
+  .sm\:px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+
+  .sm\:py-3 {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
   }
 
   .sm\:text-7xl {
